# eclipsed

./: CMakeLists.txt  README.md  TODO.md  eclipsed.pro  galacticcenter.h  game.h  main.cpp  planet.cpp  planet.h  player.h  resource.cpp  ring1.cpp  ring1.h  ring2.h  ring3.h  sector.h  sectorlink.cpp  sectorlink.h  ship.cpp  ship.h  shipblueprint.cpp  startingsector.cpp  startingsector.h  tech.h
data/: game.json  races.json  sectors.json
src/: Action.h  GameState.cpp  GameState.h  InfluenceDisc.h  PlayerBoard.cpp  PlayerBoard.h  galacticcenter.cpp  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  planet.h  player.cpp  player.h  race.cpp  race.h  resource.h  ring2.cpp  ring3.cpp  sector.cpp  sector.h  sectorlink.h  ship.h  shipblueprint.h  tech.cpp  tech.h
ui/: mainwindow.ui
